<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/albumFragment">

    <fragment
        android:id="@+id/collectorFragment"
        android:name="com.example.vinilosandroid.ui.CollectorFragment"
        android:label="@string/coleccionistas"
        tools:layout="@layout/collector_fragment" >
    </fragment>
    <fragment
        android:id="@+id/albumFragment"
        android:name="com.example.vinilosandroid.ui.AlbumFragment"
        android:label="@string/albumes"
        tools:layout="@layout/album_fragment" >
    </fragment>
    <fragment
        android:id="@+id/musicianFragment"
        android:name="com.example.vinilosandroid.ui.MusicianFragment"
        android:label="@string/artistas"
        tools:layout="@layout/musician_fragment" >
    </fragment>
    <fragment
        android:id="@+id/create_album"
        android:name="com.example.vinilosandroid.create_album"
        android:label="fragment_create_album"
        tools:layout="@layout/fragment_create_album" />
</navigation>
