<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="collector"
            type="com.example.vinilosandroid.models.Collector" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:context=".ui.MusicianDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="roboto"
                android:minHeight="50dp"
                android:text="@{collector.name}"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/item_avatar_iv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/coleccionistas"
                android:src="@drawable/ic_collector"
                tools:srcCompat="@drawable/ic_collector" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:padding="2dp"
                    android:text="@string/telefono_det_coleccionista"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="roboto"
                    android:gravity="center|start"
                    android:minHeight="50dp"
                    android:padding="2dp"
                    android:text="@{collector.telephone}"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:padding="2dp"
                    android:text="@string/correo_det_coleccionista"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="roboto"
                    android:gravity="center|start"
                    android:minHeight="50dp"
                    android:padding="2dp"
                    android:text="@{collector.email}"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>